bk_ida/gccida/c0/push_member_name
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_member_name/src/c-typeck.c:5018:9: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
depth = spelling_0 - spelling_base; 
        ^~~~~~~~~~
        spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_member_name/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_member_name/src/c-typeck.c:5026:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[depth]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_member_name/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_member_name/src/c-typeck.c:5028:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0->kind = 2; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_member_name/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_member_name/src/c-typeck.c:5029:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0->u.s = low; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_member_name/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_member_name/src/c-typeck.c:5030:3: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
++spelling_0; 
  ^~~~~~~~~~
  spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_member_name/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_member_name/src/obj/c-typeck.o] Error 1
